Use OpenAI Flex mode in AI Worker